--- a/style.css
+++ b/style.css
@@ -6,18 +6,22 @@ html {
 }
 
 body {
+  font-family: "Courier New", Courier, monospace;
   width: 100vw;
   font-size: 1px;
   margin-left: auto;
   margin-right: auto;
+  animation: color-change 1s infinite;
 }
 
 div {
+  font-family: "Courier New", Courier, monospace;
   width: 80%;
   font-size: 1px;
   padding: 2px;
   margin-left: auto;
   margin-right: auto;
+  animation: color-change 1s infinite;
 }
 
 img {
@@ -35,19 +39,33 @@ img:hover {
 }
 
 p {
+  font-family: "Courier New", Courier, monospace;
   font-size: 1px;
   padding: 2px;
   margin-left: auto;
   margin-right: auto;
+  animation: color-change 1s infinite;
 }
 
 p:hover {
   font-size: 1px;
-  font-size: 16px;
+  font-size: 12px;
   margin-left: auto;
   margin-right: auto;
+  animation: color-change 1s infinite;
 }
 
+@keyframes color-change {
+  0% {
+    color: #f0f8ff;
+  }
+  50% {
+    color: #faebd7;
+  }
+  100% {
+    color: #00ffff;
+  }
+}
 .page {
   min-height: 100vh;
   width: 50%;
@@ -55,6 +73,7 @@ p:hover {
   padding: 2px;
   margin-left: auto;
   margin-right: auto;
+  animation: color-change 1s infinite;
 }
 
 .scroll-wrapper {
